ie9 vertical align and Promise polyfill bugs

--- a/src/less/modal.less
+++ b/src/less/modal.less
@@ -26,6 +26,7 @@
     //left: 50%;
     background: white;
     transform: translate(0, -50%);
+    -ms-transform: translate(0, -50%);
     z-index: 110;
     margin: 0 auto;
 }
